# RustHelloWorld

./: .env  Cargo.toml  Dockerfile
src/: backend.rs  log_trace.rs  main.rs  mysql_db.rs  test_axum.rs  test_enum.rs  test_error_handling.rs  test_generic.rs  test_linked_list.rs  test_macro.rs  test_mysql_db.rs  test_ownership.rs  test_struct.rs  test_test.rs
